# aeroblend

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  DDALKAK_BUILD_MAC.sh  DDALKAK_BUILD_WIN.bat  DDALKAK_MAC.sh  DDALKAK_WIN.bat  Dockerfile  GETTING_STARTED.md  README.md  build.bat  build.sh  docker-compose.yml  docker-run.sh
assets/models/: _blender_quick_run.glb
cpp/: CMakeLists.txt
cpp/include/aeroblend/: camera.h  ffi.h  gpu_mesh.h  hud.h  input.h  projectile_renderer.h  renderer.h  shader.h  sky.h  terrain.h  window.h
cpp/shaders/: flat.frag  flat.vert  phong.frag  phong.vert  sky.frag  sky.vert  tracer.vert
cpp/src/: camera.cpp  gpu_mesh.cpp  hud.cpp  input.cpp  main.cpp  projectile_renderer.cpp  renderer.cpp  shader.cpp  sky.cpp  terrain.cpp  window.cpp
cpp/tests/: test_mouse_flight.cpp
docker/: entrypoint.sh  supervisord.conf
docs/: ballistics-system.md  bigco-report-aeroblend-math-lab-2026-02-22.md  company-report-aeroblend-camera-studio-2026-03-01.md  company-report-aeroblend-weapons-studio-2026-02-28.md  company-report-droneaim-dev-2026-03-01.md  company-report-mouseaim-research-2026-03-01.md  mouse-aim-math-formulas.md  mouse-aim-system.md  mouse-aim-visual-guide.md  references.md
docs/2026-02-17/: company-report-flight-control-lab-2026-02-17.md
docs/mouse-aim-research/: 00-final-report.md  01-mouseflight-analysis.md  02-mouseflight-reloaded-analysis.md  03-mouseaimflight-analysis.md  04-aeroblend-current-analysis.md  05-comparative-analysis.md
rust/: Cargo.toml
rust/aeroblend-ballistics/: Cargo.toml
rust/aeroblend-ballistics/src/: lib.rs
rust/aeroblend-core/: Cargo.toml
rust/aeroblend-core/src/: lib.rs
rust/aeroblend-ffi/: Cargo.toml  build.rs  cbindgen.toml
rust/aeroblend-ffi/src/: lib.rs
rust/aeroblend-importer/: Cargo.toml
rust/aeroblend-importer/src/: airfoil.rs  lib.rs  loader.rs  parts.rs
rust/aeroblend-math/: Cargo.toml
rust/aeroblend-math/src/: lib.rs
rust/aeroblend-physics/: Cargo.toml
rust/aeroblend-physics/src/: aerodynamics.rs  atmosphere.rs  engine.rs  integrator.rs  lib.rs  types.rs
scripts/: generate_example_aircraft.py
